syntax = "proto3";
package sojahub.sojahub.rstaking;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "rstaking/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sojahub/sojahub/x/rstaking/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sojahub/sojahub/rstaking/params";
  }
  // Queries a list of InflationBase items.
	rpc InflationBase(QueryInflationBaseRequest) returns (QueryInflationBaseResponse) {
		option (google.api.http).get = "/sojahub/sojahub/rstaking/inflation_base";
	}

// Queries a list of ValidatorWhitelist items.
	rpc ValidatorWhitelist(QueryValidatorWhitelistRequest) returns (QueryValidatorWhitelistResponse) {
		option (google.api.http).get = "/sojahub/sojahub/rstaking/validator_whitelist";
	}

// Queries a list of WhitelistSwitch items.
	rpc ValidatorWhitelistSwitch(QueryValidatorWhitelistSwitchRequest) returns (QueryValidatorWhitelistSwitchResponse) {
		option (google.api.http).get = "/sojahub/sojahub/rstaking/validator_whitelist_switch";
	}

// Queries a list of DelegatorWhitelist items.
	rpc DelegatorWhitelist(QueryDelegatorWhitelistRequest) returns (QueryDelegatorWhitelistResponse) {
		option (google.api.http).get = "/sojahub/sojahub/rstaking/delegator_whitelist";
	}

// Queries a list of DelegatorWhitelistSwitch items.
	rpc DelegatorWhitelistSwitch(QueryDelegatorWhitelistSwitchRequest) returns (QueryDelegatorWhitelistSwitchResponse) {
		option (google.api.http).get = "/sojahub/sojahub/rstaking/delegator_whitelist_switch";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryInflationBaseRequest {
}

message QueryInflationBaseResponse {
  string inflationBase = 1 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

message QueryValidatorWhitelistRequest {
}

message QueryValidatorWhitelistResponse {
  repeated string valAddress = 1;
}

message QueryValidatorWhitelistSwitchRequest {
}

message QueryValidatorWhitelistSwitchResponse {
	bool isOpen = 1;
}

message QueryDelegatorWhitelistRequest {
}

message QueryDelegatorWhitelistResponse {
	repeated string delegatorAddress = 1;
}

message QueryDelegatorWhitelistSwitchRequest {
}

message QueryDelegatorWhitelistSwitchResponse {
	bool isOpen = 1;
}

// this line is used by starport scaffolding # 3
